--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,216 +1,267 @@
 @charset "UTF-8";
 html {
-  font-size: 15px; }
+    font-size: 15px;
+}
 
 .experiencia a {
-  outline: none;
-  text-decoration: none;
-  padding: 2px 1px 0;
-  border-bottom: 1px solid; }
+    outline: none;
+    text-decoration: none;
+    padding: 2px 1px 0;
+    border-bottom: 1px solid;
+}
 
 .experiencia a:link {
-  color: #265301; }
+    color: #265301;
+}
 
 .experiencia a:visited {
-  color: #437A16; }
+    color: #437A16;
+}
 
 .experiencia a:focus {
-  border-bottom: 1px solid;
-  background: #BAE498; }
+    border-bottom: 1px solid;
+    background: #BAE498;
+}
 
 .experiencia a:hover {
-  border-bottom: 1px solid;
-  background: #CDFEAA; }
+    border-bottom: 1px solid;
+    background: #CDFEAA;
+}
 
 .experiencia a:active {
-  background: #265301;
-  color: #CDFEAA; }
+    background: #265301;
+    color: #CDFEAA;
+}
+
+.experiencia .container .mb-3 {
+    margin-top: 2em;
+}
+
+.proyectos .container .mb-3 {
+    margin-top: 2em;
+}
 
 .bienvenidos {
-  background: url("../images/home2.jpg");
-  background-size: cover;
-  height: 55vh;
-  overflow: hidden; }
+    background: url("../images/home7.jpg");
+    background-size: cover;
+    height: 55vh;
+    overflow: hidden;
+}
 
 .texto-bienvenida .fab {
-  color: #ff8d00;
-  font-size: 4rem; }
+    color: #ff8d00;
+    font-size: 4rem;
+}
 
 .fixed-top {
-  background: #212529d8; }
+    background: #212529d8;
+}
 
 .navbar-dark .navbar-brand {
-  color: #f9fafb;
-  font-size: 1.3rem;
-  text-transform: uppercase; }
+    color: #f9fafb;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+}
 
 .navbar-dark .navbar-nav .nav-link {
-  color: #f9fafb;
-  text-align: center;
-  margin: .2rem 0;
-  margin-right: 8px; }
+    color: #f9fafb;
+    text-align: center;
+    margin: .2rem 0;
+    margin-right: 8px;
+}
 
-.navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .show > .nav-link {
-  color: #fff;
-  background: #ff8d0061;
-  border-radius: 5px; }
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .show>.nav-link {
+    color: #fff;
+    background: #ff8d0061;
+    border-radius: 5px;
+}
 
-.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
-  color: white;
-  background: #ff8d0061;
-  border-radius: 5px; }
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: white;
+    background: #ff8d0061;
+    border-radius: 5px;
+}
 
 .texto-bienvenida {
-  color: white;
-  margin-top: 5rem; }
+    color: white;
+    margin-top: 5rem;
+}
 
 .btn-primary {
-  color: #fff;
-  background-color: #ff8d00;
-  border-color: #ff8d00; }
+    color: #fff;
+    background-color: #ff8d00;
+    border-color: #ff8d00;
+}
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #f8a641fc;
-  border-color: #f8a641fc; }
+    color: #fff;
+    background-color: #f8a641fc;
+    border-color: #f8a641fc;
+}
 
 .sobre-mi {
-  background-color: #ff8d00;
-  color: #fff; }
+    background-color: #ff8d00;
+    color: #fff;
+}
 
 div.avatar {
-  /* cambia estos dos valores para definir el tamaño de tu círculo */
-  height: 100px;
-  width: 100px;
-  /* los siguientes valores son independientes del tamaño del círculo */
-  background-repeat: no-repeat;
-  background-position: 50%;
-  border-radius: 50%;
-  background-size: 100% auto; }
+    /* cambia estos dos valores para definir el tamaño de tu círculo */
+    height: 100px;
+    width: 100px;
+    /* los siguientes valores son independientes del tamaño del círculo */
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    background-size: 100% auto;
+    margin-top: 3em;
+}
 
 .experiencia .fas {
-  color: #ff8d00;
-  font-size: 4rem; }
+    color: #ff8d00;
+    font-size: 4rem;
+}
 
 .proyectos {
-  background-color: #424141;
-  color: #fff; }
+    background-color: #424141;
+    color: #fff;
+}
 
 .proyectos a {
-  display: block;
-  overflow: hidden;
-  margin-bottom: 1.5rem; }
+    display: block;
+    overflow: hidden;
+    margin-bottom: 1.5rem;
+}
 
 .proyectos img {
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease; }
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+}
 
 .proyectos a:hover img {
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5); }
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5);
+}
 
 .footer {
-  color: #fff;
-  background-color: #222222; }
+    color: #fff;
+    background-color: #222222;
+}
 
 .mayuscula {
-  text-transform: uppercase; }
+    text-transform: uppercase;
+}
+
 
 /*# sourceMappingURL=estilos.css.map */
 
-.Carousel{
-  width: 100%;
-  margin: 0px 60px;
+.Carousel {
+    width: 100%;
+    margin: 0px 60px;
 }
-.Carousel h2{
-  font-size: 26px;
-  line-height: 38px;
-  padding-bottom: 24px;
-  opacity: .9;
-  text-transform: uppercase;
-  letter-spacing: 10px;
-  text-align: center;
+
+.Carousel h2 {
+    font-size: 26px;
+    line-height: 38px;
+    padding-bottom: 24px;
+    opacity: .9;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    text-align: center;
 }
+
 
 /* images */
 
-.slick-list{
-  position: relative;
-  display: flex;
-  align-items: center;
-  width: fit-content;
-  height: 304px;
-  padding: 10px 0px;
-  margin: 0px auto;
-  max-width: 90vw;
-  overflow: hidden;
+.slick-list {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    height: 304px;
+    padding: 10px 0px;
+    margin: 0px auto;
+    max-width: 90vw;
+    overflow: hidden;
 }
-.slick-track{
-  position: relative;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  transition: .5s ease-in-out;
+
+.slick-track {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    transition: .5s ease-in-out;
 }
-.slick{
-  position: relative;
-  width: 275px;
-  padding: 0 18px;
-  float: left;
-  box-sizing: border-box;
-  display: flex;
-  height: 100%;
+
+.slick {
+    position: relative;
+    width: 275px;
+    padding: 0 18px;
+    float: left;
+    box-sizing: border-box;
+    display: flex;
+    height: 100%;
 }
-.slick h4{
-  position: absolute;
-  z-index: 1;
-  font-size: 22px;
-  line-height: 23px;
-  color: #fff;
-  padding: 15px;
+
+.slick h4 {
+    position: absolute;
+    z-index: 1;
+    font-size: 22px;
+    line-height: 23px;
+    color: #fff;
+    padding: 15px;
 }
-.slick h4 small{
-  font-size: 15px;
-  display: block;
+
+.slick h4 small {
+    font-size: 15px;
+    display: block;
 }
-.slick a img{
-  object-fit: cover;
-  height: 300px;
-  width: 100%;
-  border-radius: 4px;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
-  transition: .3s ease-in-out;
+
+.slick a img {
+    object-fit: cover;
+    height: 300px;
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .5);
+    transition: .3s ease-in-out;
 }
-.slick a img:hover{
-  opacity: .85;
+
+.slick a img:hover {
+    opacity: .85;
 }
+
 
 /* buttons */
 
-.slick-arrow{
-  border-radius: 30px;
-  background-color: #fff;
-  position: absolute;
-  z-index: 4;
-  width: 48px;
-  height: 48px;
-  text-align: center;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.15);
-  border: 0;
-  cursor: pointer;
+.slick-arrow {
+    border-radius: 30px;
+    background-color: #fff;
+    position: absolute;
+    z-index: 4;
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .15);
+    border: 0;
+    cursor: pointer;
 }
-.slick-arrow:focus{
-  outline: 0;
+
+.slick-arrow:focus {
+    outline: 0;
 }
-.slick-arrow svg{
-  width: 12px;
-  height: 100%;
-  color: rgba(0,0,0,.7);
+
+.slick-arrow svg {
+    width: 12px;
+    height: 100%;
+    color: rgba(0, 0, 0, .7);
 }
-.slick-prev{
-  left: 0px;
+
+.slick-prev {
+    left: 0px;
 }
-.slick-next{
-  right: 0px;
+
+.slick-next {
+    right: 0px;
 }
